[style fix] : fix the wrapping of the text in that section

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,6 +15,16 @@
   .category-img-container:hover .category-shop-link {
     display: flex;
   }
+  .text-to-be-wrapped {
+    hyphens: auto;
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    -ms-hyphens: auto;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    word-break: break-word;
+    -ms-word-break: break-word;
+  }
 }
 @layer utilities {
   h1,
